[project]
name = "qwen-image-edit-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers[torch]",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }

[dependency-groups]
dev = [
    "modelscope>=1.29.1",
]
